fix: handle customerCrupdated event synchronously