@@ -1,9 +1,6 @@
 package app.bpartners.api.service;
 
 import app.bpartners.api.endpoint.event.EventConf;
-import app.bpartners.api.endpoint.event.EventProducer;
-import app.bpartners.api.endpoint.event.model.TypedCustomerCrupdated;
-import app.bpartners.api.endpoint.event.model.TypedEvent;
 import app.bpartners.api.endpoint.event.model.gen.CustomerCrupdated;
 import app.bpartners.api.endpoint.rest.mapper.CustomerRestMapper;
 import app.bpartners.api.endpoint.rest.model.CreateCustomer;
@@ -28,6 +25,7 @@ import java.util.stream.Collectors;
 import javax.transaction.Transactional;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 
 import static app.bpartners.api.endpoint.event.EventProducer.Conf.MAX_PUT_EVENT_ENTRIES;
@@ -44,9 +42,9 @@ public class CustomerService {
       "ID,Nom,Prénom,Email,Site web,Adresse,Code postal,Ville,Pays,Commentaire";
   private final CustomerRepository repository;
   private final CustomerRestMapper restMapper;
-  private final EventProducer eventProducer;
   private final EventConf eventConf;
   private final BanApi banApi;
+  private final CustomerCrupdatedService customerCrupdatedService;
 
   public void exportCustomers(String idUser, String fileType, PrintWriter pw) {
     var customers = repository.findAllByIdUserOrderByLastNameAsc(idUser);
@@ -75,7 +73,7 @@ public class CustomerService {
     if (filters != null && !filters.isEmpty()) {
       keywords.addAll(filters.stream()
           .map(String::toLowerCase)
-          .collect(Collectors.toList()));
+          .toList());
     }
     return repository.findByIdUserAndCriteria(idUser, firstName, lastName, email,
         phoneNumber, city, country, keywords, status, pageValue, pageSizeValue);
@@ -89,22 +87,23 @@ public class CustomerService {
   public List<Customer> crupdateCustomers(List<Customer> customers) {
     List<Customer> saved = repository.saveAll(customers);
 
-    List<TypedEvent> typedEvent = saved.isEmpty() ? List.of()
+    List<CustomerCrupdated> customerCrupdatedList = saved.isEmpty() ? List.of()
         : saved.stream().map(customer -> {
           User user = AuthProvider.getAuthenticatedUser();
           return toTypedEvent(user, customer, customer.isRecentlyAdded());
         })
         .collect(Collectors.toList());
-    int typedEventSize = typedEvent.size();
+
+    int typedEventSize = customerCrupdatedList.size();
     if (typedEventSize > MAX_PUT_EVENT_ENTRIES) {
       int subdivision = (int) Math.ceil(typedEventSize / (double) MAX_PUT_EVENT_ENTRIES);
       for (int i = 1; i <= subdivision; i++) {
         int firstIndex = i == 1 ? 0 : ((i - 1) * MAX_PUT_EVENT_ENTRIES);
         int afterLastIndex = i == subdivision ? typedEventSize : (i * MAX_PUT_EVENT_ENTRIES);
-        eventProducer.accept(typedEvent.subList(firstIndex, afterLastIndex));
+        customerCrupdatedService.accept(customerCrupdatedList.subList(firstIndex, afterLastIndex));
       }
     } else {
-      eventProducer.accept(typedEvent); //TODO: add appropriate test
+      customerCrupdatedService.accept(customerCrupdatedList); //TODO: add appropriate test
     }
 
     return saved;
@@ -129,24 +128,22 @@ public class CustomerService {
     }
   }
 
-  private TypedCustomerCrupdated toTypedEvent(User user, Customer customer, boolean isNew) {
+  private CustomerCrupdated toTypedEvent(User user, Customer customer, boolean isNew) {
     String subject = isNew
         ? "Ajout du nouveau client " + customer.getName() + " par l'artisan " + user.getName()
         : "Modification du client existant " + customer.getName() + " par l'artisan "
         + user.getName();
     String recipientEmail = eventConf.getAdminEmail();
-    return new TypedCustomerCrupdated(
-        new CustomerCrupdated()
-            .subject(subject)
-            .recipientEmail(recipientEmail)
-            .type(isNew ? CustomerCrupdated.Type.CREATE
-                : CustomerCrupdated.Type.UPDATE)
-            .user(user)
-            .customer(customer)
-    );
+    return new CustomerCrupdated()
+        .subject(subject)
+        .recipientEmail(recipientEmail)
+        .type(isNew ? CustomerCrupdated.Type.CREATE
+            : CustomerCrupdated.Type.UPDATE)
+        .user(user)
+        .customer(customer);
   }
 
-  //@Scheduled(cron = Scheduled.CRON_DISABLED)
+  @Scheduled(cron = Scheduled.CRON_DISABLED)
   public void updateCustomersLocation() {
     List<Customer> customers = repository.findWhereLatitudeOrLongitudeIsNull();
     int customersCount = customers.size();
